clusters/production/infrastructure/weave-gitops/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: weave-gitops
  namespace: flux-system
  annotations: {}
spec:
  ingressClassName: traefik
  rules:
    - host: weave.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: ww-gitops-weave-gitops
                port:
                  number: 9001
